# farmer

./: .gitignore  .pylintrc  README.md  benders.ipynb  benders.py  mypy.ini  pyproject.toml  pyrightconfig.json
farmer/: benders.ipynb  lagrange.ipynb  pha.ipynb
farmer/beders/: benders.py  master_problem.py  sub_problem.py
farmer/benders/: __init__.py
farmer/config/: __init__.py  config.py
farmer/lagrange/: __init__.py  lagrange.py  sub_problems.py
farmer/pha/: __init__.py  base_problem.py  pha.py
farmer/solver/: __init__.py  result.py  solver.py
