[tool.poetry]
name = "farmer"
version = "0.1.0"
description = "Farmer Optimization Problem with Gurobi"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
